feature(user-signin-api)add user info endpoint
[Finishes #168143978]
